# StemSonare

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
mcp_server/: server.py  server_feedback.py
